@@ -1,3 +1,8 @@
+2015-08-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c (dfamust): Restore c90 compat by moving some
+	variable declarations to the top of the routine.
+
 2015-08-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with GNU grep. Yet again, again.
